2009-05-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix derivative vector size.
	* include/roboptim/core/n-times-derivable-function.hh:
	Fix derivative vector size and corresponding checks.

2009-05-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Clean and check result class.
	* include/roboptim/core/result.hh: Unconst and rename
	n and m attributes.
	* src/result.cc: Change implementation in consequence,
	enhance display.
	* tests/Makefile.am: Compile new test.
	* tests/result.cc: New.
	* tests/result.stdout: New.
	* tests/testsuite.at: Run new test.

2009-05-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove use of unitialized memory.
	* src/result.cc: Clear all vectors in Result constructor.

2009-05-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove use of unitialized memory.
	* src/numeric-linear-function.cc: Restyle.
	* tests/numeric-linear-function.cc,
	* tests/numeric-quadratic-function.cc: Initialize matrices properly.

2009-05-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix libltdl detection.
	* configure.ac: Here.

2009-05-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Improve readibility and safety of the function's hierarchy.
	* include/roboptim/core/derivable-function.hh,
	* include/roboptim/core/finite-difference-gradient.hh,
	* include/roboptim/core/function.hh,
	* include/roboptim/core/linear-function.hh,
	* include/roboptim/core/n-times-derivable-function.hh,
	* include/roboptim/core/numeric-linear-function.hh,
	* include/roboptim/core/numeric-quadratic-function.hh,
	* include/roboptim/core/problem.hxx,
	* include/roboptim/core/twice-derivable-function.hh,
	* include/roboptim/core/visualization/gnuplot-function.hh,
	* src/derivable-function.cc,
	* src/finite-difference-gradient.cc,
	* src/function.cc,
	* src/linear-function.cc,
	* src/numeric-linear-function.cc,
	* src/numeric-quadratic-function.cc:
	Split operator (), jacobian, gradient into seperate interface
	and implementation methods.